#
# Copyright (C) 2022 Intel Corporation.
# SPDX-License-Identifier: Apache 2.0
#

#

add_subdirectory(model-comparator)

add_subdirectory(test_classification)
add_subdirectory(single-image-test)

add_subdirectory(vpux-opt)
add_subdirectory(vpux-translate)
add_subdirectory(vpux-lsp-server)

add_subdirectory(profiling_parser)

add_subdirectory(vpux-binutils)
